--- a/Pipfile
+++ b/Pipfile
@@ -4,17 +4,17 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-faker = "14.2.0"
-flask = "2.2.2"
-flask-migrate = "3.1.0"
-flask-sqlalchemy = "3.0.3"
-Werkzeug = "2.2.2"
-importlib-metadata = "6.0.0"
+Faker = "14.2.0"
+Flask-SQLAlchemy = "2.5.1"
 importlib-resources = "5.10.0"
 ipdb = "0.13.9"
-sqlalchemy-serializer = "1.4.1"
-pytest = "7.2.0"
-flask-cors = "3.0.10"
+pytest = "7.1.3"
+flask-restful = "*"
+sqlalchemy-serializer = "*"
+flask-migrate = "*"
+flask = "==2.2.2"
+werkzeug = "==2.2.2"
+sqlalchemy = "==1.4.*"
 
 [requires]
-python_full_version = "3.8.13"
+python_full_version = "3.10.12"
